# Parallel-Computing-Assignment-1

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  main.c  parallel.c  parallel.h  plot.py  rapor.md  serial.c  serial.h
